--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                 <h2 class="section-tittle">Save Wildlife, Protect Neture</h2>
                 <div class="join-form">
                     <input type="text" class="input1" placeholder="Your Name"><br><br>
-                    <input type="email" class="input1" placeholder="Email"><br><br>
-                    <input type="text" class="input1" placeholder="Number"><br><br>
-                    <input type="text" class="input1" placeholder="Address"><br><br>
+                    <input type="email" class="input1" placeholder="Your Email"><br><br>
+                    <input type="text" class="input1" placeholder="Your Number"><br><br>
+                    <input type="text" class="input1" placeholder="Your Address"><br><br>
                 </div>
             </div>
         </div>
