--- a/index.html
+++ b/index.html
@@ -76,19 +76,58 @@
             </div>
         </div>
     </section>
-    <section class="join-us">
+    <section id="join-us">
         <div class="section-box">
             <div class="content-wrap">
                 <h3 class="section-sub">Join with us</h3>
                 <h2 class="section-tittle">Save Wildlife, Protect Neture</h2>
                 <div class="join-form">
-                    <input type="text" class="input1" placeholder="Your Name"><br><br>
-                    <input type="email" class="input1" placeholder="Your Email"><br><br>
-                    <input type="text" class="input1" placeholder="Your Number"><br><br>
-                    <input type="text" class="input1" placeholder="Your Address"><br><br>
+                    <input type="text" class="input-1 i1" placeholder="Your Name">
+                    <input type="email" class="input-1 i2" placeholder="Your Email">
+                    <input type="text" class="input-1 i3" placeholder="Your Number">
+                    <input type="text" class="input-1 i4" placeholder="Your Address">
+                    <p>MemberShip</p>
+                    <div class="checkbox-wrap">
+                        <label><input type="checkbox" >Individual</label>
+                        <label><input type="checkbox" >Family</label>
+                        <label><input type="checkbox" >Carporate</label>
+                    </div>
+                    <button class="join-btn">be a member</button>
+
                 </div>
             </div>
         </div>
+    </section>
+    <section id="footer">
+         <div class="section-box">
+            <div class="footer-grid">
+                <div>
+                    <h3>Quick Link</h3>
+                    <a class="footer-item f1">Home</a>
+                    <a class="footer-item f2">About</a>
+                    <a class="footer-item f3">Projects</a>
+                    <a class="footer-item f4">Resources</a>
+                    <a class="footer-item f5">Blog</a>
+                    <a class="footer-item f6">Contect</a>
+                </div>
+                <div>
+                    <h3>Contects</h3>
+                    <a class="footer-item f1">8757 7003 03</a>
+                    <a class="footer-item f2">0000 0000 28</a>
+                    <a class="footer-item f3">info@WildlifeGuardians.com</a>
+                    <a class="footer-item f4">1234 forest dive, Green vally , CA 90210</a>
+                </div>
+                <div>
+                    <h3>Social</h3>
+                    <a class="footer-item f1">Facebook</a>
+                    <a class="footer-item f2">Twiter</a>
+                    <a class="footer-item f3">Instagram</a>
+                    <a class="footer-item f4">YouTube</a>
+                    <a class="footer-item f5">LinkedIn</a>
+                </div>
+            </div>
+            <p class="copyrights">© codegenweb | all rights reserved</p>
+         </div>
     </section>  
 </body>
 </html>
